fix [[Broken][Syntax]] problems: changed to [[Correct|Syntax]]

--- a/html/A Clash of Kings.html
+++ b/html/A Clash of Kings.html
@@ -1,13 +1,17 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>A Clash of Kings - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>A Clash of Kings - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <p>
-<img src="http://upload.wikimedia.org/wikipedia/en/3/39/AClashOfKings.jpg" />
+[<a href="http://upload.wikimedia.org/wikipedia/en/3/39/AClashOfKings.jpg]">http://upload.wikimedia.org/wikipedia/en/3/39/AClashOfKings.jpg]</a>
 </p>
 
 <h1 id="toc_1">NOTE: This page contains serious Spoilers!</h1>
@@ -29,12 +33,12 @@ But I also believe that George Martin does not mean to destroy the Starks for <s
 </p>
 
 <p>
-But something shocked me. I just opened the page (<a href="http://awoiaf.westeros.org/index.php/Stark">http://awoiaf.westeros.org/index.php/Stark</a>) and it says the Heir to the House is Arya Stark. Does that mean all three boys die in the following books? I don’t think there’s a second answer…
+But something shocked me. I just opened the page (<a href="http://awoiaf.westeros.org/index.php/Stark)">http://awoiaf.westeros.org/index.php/Stark)</a> and it says the Heir to the House is Arya Stark. Does that mean all three boys die in the following books? I don’t think there’s a second answer…
 Back to the Starks. Clearly neither Bran nor Rickon is strong enough to live. Recall one of my favorite quotes, which is Bran’s thought in the last chapter: When a man was hurt you took him to the maester, but what could you do when your maester was hurt? So innocent and helpless a boy. Not to mention Rickon; recall that when the brothers split he clung to Hodor’s leg.
 </p>
 
 <p>
-This post here (<a href="http://asoiaf.westeros.org/index.php/topic/55457-most-surprising-moment-of-the-series-so-far/">http://asoiaf.westeros.org/index.php/topic/55457-most-surprising-moment-of-the-series-so-far/</a>) inspired me to note down <strong>some of the most shocking moments here</strong>. First, I’ll go with the sudden defeat of Stannis. Stannis had much larger host than King’s Landing’s, yet the unexpected, sudden arrival of Lord Tywin changed everything. I really don’t know, just as the Imp didn’t, how the hell Tywin showed up. Poor Baratheons… So up to now, the only Baratheon blood left in the world will be Robert’s Bastard’s. And there are no such persons who can be called the Rightful King. I wonder what role the Red Priestess will play from now on (according to the Wiki, she will continue to show up all up to the latest book, A Dance with Dragons).
+This post here (<a href="http://asoiaf.westeros.org/index.php/topic/55457-most-surprising-moment-of-the-series-so-far/)">http://asoiaf.westeros.org/index.php/topic/55457-most-surprising-moment-of-the-series-so-far/)</a> inspired me to note down <strong>some of the most shocking moments here</strong>. First, I’ll go with the sudden defeat of Stannis. Stannis had much larger host than King’s Landing’s, yet the unexpected, sudden arrival of Lord Tywin changed everything. I really don’t know, just as the Imp didn’t, how the hell Tywin showed up. Poor Baratheons… So up to now, the only Baratheon blood left in the world will be Robert’s Bastard’s. And there are no such persons who can be called the Rightful King. I wonder what role the Red Priestess will play from now on (according to the Wiki, she will continue to show up all up to the latest book, A Dance with Dragons).
 </p>
 
 <p>
@@ -53,45 +57,45 @@ Mid Autumn Festival, Sep 12, 2011.
 <ul>
 <li>
 "Was there ever a war where only one side bled?" -- Brynden Tully.
-</li>
+
 <li>
 "The dwarf, the evil counselor, the twisted little monkey demon. I'm all that stands between them and chaos." -- Tyrion Lannister.
-</li>
+
 <li>
 "A man sees. A man hears. A man knows." -- Jaqen H'ghar.
-</li>
+
 <li>
 When a man was hurt you took him to the maester, but what could you do when your maester was hurt? -- (Bran)
-</li>
+
 <li>
 "She has the blood of a wolf." (by Joffery Baratheon) "And you have the wits of a goose." (by Tyrion Lannister)
-</li>
+
 <li>
 Tomorrow's trials concerned her more than yesterday's triumphs. -- (Catelyn)
-</li>
+
 <li>
 "The brightest flame casts the darkest shadow." -- Melisandre
-</li>
+
 <li>
 "If you can't protect yourself, die and get out of the way of those who can." -- Sandor Clegane the Hound.
-</li>
+
 </ul>
 
 <h2 id="toc_1.2">Images</h2>
 <p>
-Melisandre; by <a href="http://www.carriebest.com/">Carri</a> via <a href="http://awoiaf.westeros.org/index.php/Melisandre">here</a>. 
+Melisandre; by [<a href="http://www.carriebest.com/">http://www.carriebest.com/</a> Carri] via [<a href="http://awoiaf.westeros.org/index.php/Melisandre">http://awoiaf.westeros.org/index.php/Melisandre</a> here]. 
 </p>
 
 <p>
-<img src="http://awoiaf.westeros.org/images/thumb/d/d1/Melisandre_by_carriebest.jpg/350px-Melisandre_by_carriebest.jpg" />
+[<a href="http://awoiaf.westeros.org/images/thumb/d/d1/Melisandre_by_carriebest.jpg/350px-Melisandre_by_carriebest.jpg]">http://awoiaf.westeros.org/images/thumb/d/d1/Melisandre_by_carriebest.jpg/350px-Melisandre_by_carriebest.jpg]</a>
 </p>
 
 <p>
-Stannis Baratheon; by <a href="http://en.amokanet.ru/gallery/martin/martin.html">Amoka</a> via <a href="http://awoiaf.westeros.org/index.php/Stannis">here</a>.
+Stannis Baratheon; by [<a href="http://en.amokanet.ru/gallery/martin/martin.html">http://en.amokanet.ru/gallery/martin/martin.html</a> Amoka] via [<a href="http://awoiaf.westeros.org/index.php/Stannis">http://awoiaf.westeros.org/index.php/Stannis</a> here].
 </p>
 
 <p>
-<img src="http://awoiaf.westeros.org/images/f/f0/Stannis_Baratheon.jpg" />
+[<a href="http://awoiaf.westeros.org/images/f/f0/Stannis_Baratheon.jpg]">http://awoiaf.westeros.org/images/f/f0/Stannis_Baratheon.jpg]</a>
 </p>
 
 <hr />
