--- a/html/A Mystery of Heroism.html
+++ b/html/A Mystery of Heroism.html
@@ -1,24 +1,28 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>A Mystery of Heroism</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>A Mystery of Heroism</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <ul>
 <li>
 a pioneer of naturalism in America; wrote <em>The Red Badge of Courage</em>
-</li>
+
 <li>
 focus on the <strong>thoughts and behaviors of characters in times of crisis</strong>
-</li>
+
 <li>
 ironist; he gives machines of wars human characteristics, humans fighting the war become machines (we have seen this a little bit in <em>Bierce</em>).
-</li>
+
 <li>
 live what they wrote
-</li>
+
 </ul>
 
 <p>
@@ -27,7 +31,7 @@ live what they wrote
 <ol>
 <li>
 gain support
-</li>
+
 </ol>
 
 <h2 id="toc_0.1">Impressionism = subjective description</h2>
@@ -37,16 +41,16 @@ gain support
 <ul>
 <li>
 (Random, graphic capture of) death and destruction
-</li>
+
 <li>
 meadow
-</li>
+
 <li>
 the lieutanant with a broken arm
-</li>
+
 <li>
 Fred Collins
-</li>
+
 </ul>
 
 <h2 id="toc_0.2">Heroism</h2>
@@ -56,13 +60,13 @@ Fred Collins
 <ol>
 <li>
 uncommon ability
-</li>
+
 <li>
 righteous &amp; helpful
-</li>
+
 <li>
 no fear
-</li>
+
 </ol>
 
 <p>
@@ -71,10 +75,10 @@ no fear
 <ol>
 <li>
 common ability
-</li>
+
 <li>
 fear
-</li>
+
 </ol>
 <hr />
 <p>
@@ -83,31 +87,31 @@ look for:
 <ol>
 <li>
 **<strong>personifications</strong>** of weapons (machines -&gt; people)
-</li>
+
 <ol>
 <li>
 "... a battery was arguing in tremendous roars with some other guns"
-</li>
+
 <li>
 The guns, with their demeanours of stolidity and courage, were typical of something infinitely self-possessed in this clamour of death that swirled around the hill.
-</li>
+
 </ol>
 <li>
 subjective description
-</li>
+
 <li>
 compare men to machines (**<strong>metaphor</strong>**)
-</li>
+
 <ol>
 <li>
 "As the eyes of half the regiment swept in one machine-like movement,"
-</li>
+
 <li>
 Fewer white-legged men laboured about the guns. A shell had smitten one of the pieces, and after the flare, the smoke, the dust, the wrath of this blow were gone, it was possible to see white lugs stretched horizontally upon the ground. 
-</li>
+
 <li>
 There was a general movement in the compact column. The long animal-like thing moved slightly. Its four hundred eyes were turned upon the figure of collins.
-</li>
+
 </ol>
 </ol>
   
@@ -115,10 +119,10 @@ There was a general movement in the compact column. The long animal-like thing m
 <ul>
 <li>
 dehumanizes the people that fight;
-</li>
+
 <li>
 humanizes the weapons they use;
-</li>
+
 </ul>
 
 <p>
@@ -128,7 +132,7 @@ why say "quaint emotions"?
 <ul>
 <li>
 (not afraid) shocked + surprised -&gt; disappointed
-</li>
+
 </ul>
 
 </body>
