--- a/html/A Song of Ice and Fire.html
+++ b/html/A Song of Ice and Fire.html
@@ -1,36 +1,40 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>A Song of Ice and Fire - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>A Song of Ice and Fire - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <p>
-<img src="http://awoiaf.westeros.org/images/thumb/e/e4/Mp_title.png/450px-Mp_title.png" />
+[<a href="http://awoiaf.westeros.org/images/thumb/e/e4/Mp_title.png/450px-Mp_title.png]">http://awoiaf.westeros.org/images/thumb/e/e4/Mp_title.png/450px-Mp_title.png]</a>
 </p>
 
 <p>
-Wikipedia page <a href="http://en.wikipedia.org/wiki/A_song_of_ice_and_fire">here</a>.
+Wikipedia page [<a href="http://en.wikipedia.org/wiki/A_song_of_ice_and_fire">http://en.wikipedia.org/wiki/A_song_of_ice_and_fire</a> here].
 </p>
 
 <p>
-<a href="http://awoiaf.westeros.org/index.php/Main_Page">A Wiki of Ice &amp; Fire</a>, essential help!
+[<a href="http://awoiaf.westeros.org/index.php/Main_Page">http://awoiaf.westeros.org/index.php/Main_Page</a> A Wiki of Ice &amp; Fire], essential help!
 </p>
 
 <p>
-A fantastic map for Westeros <a href="http://geotakucovi.com/Westeros_03.jpg">here</a> (can't track the original author, sorry).
+A fantastic map for Westeros [<a href="http://geotakucovi.com/Westeros_03.jpg">http://geotakucovi.com/Westeros_03.jpg</a> here] (can't track the original author, sorry).
 </p>
 
 <p>
-A fantastic gallery <a href="http://en.amokanet.ru/gallery/martin/martin.html">here</a>.
+A fantastic gallery [<a href="http://en.amokanet.ru/gallery/martin/martin.html">http://en.amokanet.ru/gallery/martin/martin.html</a> here].
 </p>
 
 <h2 id="toc_0.1">I have read</h2>
 <ul>
 <li>
 <a href="A Clash of Kings.html">A Clash of Kings</a>.
-</li>
+
 </ul>
 <hr />
 <p>
