--- a/html/A tricky yank task study.html
+++ b/html/A tricky yank task study.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>A Tricky Yank Task Study: How to deal with Kindle's Notes and Highlights using Vim - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>A Tricky Yank Task Study: How to deal with Kindle's Notes and Highlights using Vim - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">A Tricky Yank Task Study</h1>
 
 <h2 id="toc_1.1">Task Description</h2>
@@ -61,7 +65,7 @@ to embark. He says he needs friends.
 <ul>
 <li>
 <code>:let @a=''</code>
-</li>
+
 </ul>
 <p>
 empty register a; see <code>:h :let</code>.
@@ -69,7 +73,7 @@ empty register a; see <code>:h :let</code>.
 <ul>
 <li>
 <code>|</code>
-</li>
+
 </ul>
 <p>
 end the previous Ex command and start a new one; see <code>h: :bar</code>.
@@ -77,7 +81,7 @@ end the previous Ex command and start a new one; see <code>h: :bar</code>.
 <ul>
 <li>
 <code>\{10\}</code>
-</li>
+
 </ul>
 <p>
 matching ten times previous pattern. see <code>:h /\{</code>.
