--- a/html/AP Computer Science.html
+++ b/html/AP Computer Science.html
@@ -1,23 +1,27 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>AP Computer Science - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>AP Computer Science - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Tutorials</h1>
 <ul>
 <li>
 <a href="http://download.oracle.com/javase/tutorial/java/TOC.html">http://download.oracle.com/javase/tutorial/java/TOC.html</a>
-</li>
+
 </ul>
 
 <h1 id="toc_2">API/Packages</h1>
 <ul>
 <li>
 <a href="http://download.oracle.com/javase/6/docs/api/">http://download.oracle.com/javase/6/docs/api/</a> You can search for useful packages contained in Java SE 6 API here.
-</li>
+
 </ul>
 <hr />
 <p>
