--- a/html/Combinatorics.html
+++ b/html/Combinatorics.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Combinatorics - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Combinatorics - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Combinatorics</h1>
 
 <h2 id="toc_1.1">Special Numbers</h2>
@@ -15,16 +19,16 @@ Bell Number
 <ul>
 <li>
 number of different partitions of n elements
-</li>
+
 <li>
 <a href="http://mathworld.wolfram.com/BellNumber.html">http://mathworld.wolfram.com/BellNumber.html</a>
-</li>
+
 <li>
-strong resemblance to 2nd Kind Stirling Number: $B_n = \sum_{k = 0}^{n} S(n, k)$.
-</li>
+strong resemblance to 2nd Kind Stirling Number: \(B_n = \sum_{k = 0}^{n} S(n, k)\).
+
 <li>
 Calculation: Bell's Triangle
-</li>
+
 </ul>
 
 <p>
@@ -33,20 +37,20 @@ Eulerian Number E(n, k)
 <ul>
 <li>
 number of permutations of {1, 2, ..., n} which have k ascents
-</li>
+
 <li>
 E(n, k) = E(n, n - 1 - k)
-</li>
+
 <li>
 E(n, k) = (k + 1)E(n - 1, k) + (n - k)E(n - 1, k - 1)
-</li>
+
 </ul>
 
 <h2 id="toc_1.2">Problems</h2>
 <ul>
 <li>
 <a href="mathematician-language problem.html">mathematician-language problem</a>.
-</li>
+
 </ul>
 
 <hr />
