--- a/html/Frankenstein.html
+++ b/html/Frankenstein.html
@@ -1,14 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Frankenstein, by Mary Shelley - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Frankenstein, by Mary Shelley - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Frankenstein - Summary</h1>
 <p>
-Finished within approximately 4 days. Finished date is Feb 4, 2011. 3rd English book reader on <a href="Kindle.html">Kindle</a>.
+Finished within approximately 4 days. Finished date is Feb 4, 2011. 3rd English book read on <a href="Kindle.html">Kindle</a>.
 </p>
 
 <p>
@@ -18,42 +22,42 @@ The author is <a href="Mary Shelley.html">Mary Shelley</a> (English woman).
 <h1>= Table of Contents =</h1>
 <div class="toc">
 <ul>
-<li><a href="#toc_1">Frankenstein - Summary</a></li>
+<li><a href="#toc_1">Frankenstein - Summary</a>
 <ul>
-<li><a href="#toc_1.1">Notes</a></li>
+<li><a href="#toc_1.1">Notes</a>
 <ul>
-<li><a href="#toc_1.1.1">Letter One</a></li>
-<li><a href="#toc_1.1.2">Letter Two</a></li>
-<li><a href="#toc_1.1.3">Letter Threehe</a></li>
-<li><a href="#toc_1.1.4">Letter Four</a></li>
-<li><a href="#toc_1.1.5">August 13</a></li>
-<li><a href="#toc_1.1.6">August 19</a></li>
-<li><a href="#toc_1.1.7">Chap 1</a></li>
-<li><a href="#toc_1.1.8">Chap 2</a></li>
-<li><a href="#toc_1.1.9">Chap 3</a></li>
-<li><a href="#toc_1.1.10">Chap 4</a></li>
-<li><a href="#toc_1.1.11">Chap 5</a></li>
-<li><a href="#toc_1.1.12">Chap 6</a></li>
-<li><a href="#toc_1.1.13">Chap 7</a></li>
-<li><a href="#toc_1.1.14">Chap 8</a></li>
-<li><a href="#toc_1.1.15">Chap 9</a></li>
-<li><a href="#toc_1.1.16">Chap 10</a></li>
-<li><a href="#toc_1.1.17">Chap 11</a></li>
-<li><a href="#toc_1.1.18">Chap 12</a></li>
-<li><a href="#toc_1.1.19">Chap 13</a></li>
-<li><a href="#toc_1.1.20">Chap 14</a></li>
-<li><a href="#toc_1.1.21">Chap 15</a></li>
-<li><a href="#toc_1.1.22">Chap 16</a></li>
-<li><a href="#toc_1.1.23">Chap 17</a></li>
-<li><a href="#toc_1.1.24">Chap 18</a></li>
-<li><a href="#toc_1.1.25">Chap 19</a></li>
-<li><a href="#toc_1.1.26">Chap 20</a></li>
-<li><a href="#toc_1.1.27">Chap 21</a></li>
-<li><a href="#toc_1.1.28">Chap 22</a></li>
-<li><a href="#toc_1.1.29">Chap 23</a></li>
-<li><a href="#toc_1.1.30">Chap 24</a></li>
+<li><a href="#toc_1.1.1">Letter One</a>
+<li><a href="#toc_1.1.2">Letter Two</a>
+<li><a href="#toc_1.1.3">Letter Threehe</a>
+<li><a href="#toc_1.1.4">Letter Four</a>
+<li><a href="#toc_1.1.5">August 13</a>
+<li><a href="#toc_1.1.6">August 19</a>
+<li><a href="#toc_1.1.7">Chap 1</a>
+<li><a href="#toc_1.1.8">Chap 2</a>
+<li><a href="#toc_1.1.9">Chap 3</a>
+<li><a href="#toc_1.1.10">Chap 4</a>
+<li><a href="#toc_1.1.11">Chap 5</a>
+<li><a href="#toc_1.1.12">Chap 6</a>
+<li><a href="#toc_1.1.13">Chap 7</a>
+<li><a href="#toc_1.1.14">Chap 8</a>
+<li><a href="#toc_1.1.15">Chap 9</a>
+<li><a href="#toc_1.1.16">Chap 10</a>
+<li><a href="#toc_1.1.17">Chap 11</a>
+<li><a href="#toc_1.1.18">Chap 12</a>
+<li><a href="#toc_1.1.19">Chap 13</a>
+<li><a href="#toc_1.1.20">Chap 14</a>
+<li><a href="#toc_1.1.21">Chap 15</a>
+<li><a href="#toc_1.1.22">Chap 16</a>
+<li><a href="#toc_1.1.23">Chap 17</a>
+<li><a href="#toc_1.1.24">Chap 18</a>
+<li><a href="#toc_1.1.25">Chap 19</a>
+<li><a href="#toc_1.1.26">Chap 20</a>
+<li><a href="#toc_1.1.27">Chap 21</a>
+<li><a href="#toc_1.1.28">Chap 22</a>
+<li><a href="#toc_1.1.29">Chap 23</a>
+<li><a href="#toc_1.1.30">Chap 24</a>
 </ul>
-<li><a href="#toc_1.2">Highlights</a></li>
+<li><a href="#toc_1.2">Highlights</a>
 </ul>
 </ul>
 </div>
