--- a/html/Graph Theory and Algorithms.html
+++ b/html/Graph Theory and Algorithms.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Graphy Theory and Algorithms - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Graphy Theory and Algorithms - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Graph Algorithms</h1>
 <p>
 <a href="Topological Sort.html">Topological Sort</a>
@@ -25,7 +29,7 @@ Strongly connected: A directed graph is called strongly connected if there is a 
 </p>
 
 <p>
-一次会议有 n 名教授 $A_1, ..., A_n$ 参加，证明可以将这 n 个人分为两组，使得每一个人 $A_i$ 在另一组中认识的人数 $d_i$ 不少于他在同一组中认识的人数 $d_{i}^'.
+一次会议有 n 名教授 \(A_1, ..., A_n\) 参加，证明可以将这 n 个人分为两组，使得每一个人 \(A_i\) 在另一组中认识的人数 \(d_i\) 不少于他在同一组中认识的人数 $d_{i}^'.
 </p>
 
 
