--- a/html/Kindle.html
+++ b/html/Kindle.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Kindle - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Kindle - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Kindle</h1>
 
 <p>
@@ -16,7 +20,7 @@ Kindle is the best trade I've ever made. You should be green (too). :)
 <ul>
 <li>
 You can easily search for a word or a sentence within the book, a function I found extremely useful when reading big books like <a href="A Song of Ice and Fire.html">A Song of Ice and Fire</a> series.
-</li>
+
 </ul>
 
 <h2 id="toc_1.2">The Order</h2>
@@ -32,10 +36,10 @@ In total, the order costs me less than 1100 rmb.
 <ul>
 <li>
 Duokan System is okay, but I think Kindle 3 only satisfies readers reading <a href="Reading.html">Literature</a> in mobi. If you want to read pdf's, go to Kindle DXG or other devices.
-</li>
+
 <li>
 I found Kindle extremely suitbale for learning math textbooks. Because you don't need too much space for viewing; you just read a small piece, think, and learn.
-</li>
+
 </ul>
 
 <hr />
