--- a/html/Kruskal.html
+++ b/html/Kruskal.html
@@ -1,24 +1,28 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Kruskal</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Kruskal</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <p>
 Kruskal
 </p>
 <ul>
 <li>
 贪心算法
-</li>
+
 <li>
 先对边排序，每次选择一条权值最小且满足以下要求的边加入生成树：边的端点一个已在生成树内，一个不在
-</li>
+
 <li>
 判别是否在生成树内使用并查集维护
-</li>
+
 </ul>
 
 </body>
