--- a/html/Macroeconomics.html
+++ b/html/Macroeconomics.html
@@ -1,51 +1,55 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Macroeconomics Notes - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Macroeconomics Notes - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">AS, AD, GPD</h1>
 <ul>
 <li>
 <code>GDP = C (consumption) + I (investment) + G (government purchases) + (Exports - Imports)</code>
-</li>
+
 <li>
 Aggregate damand has the same components of GPD; thus AD = C + I + G + X - M.
-</li>
+
 <li>
 AD up, Y up, MD up.
-</li>
+
 </ul>
 
 <h1 id="toc_2">Fiscal</h1>
 <ul>
 <li>
 Spending multiplier: d(expenditure) * spending multiplier = d(real gdp)
-</li>
+
 <li>
 Government spending multiplier
-</li>
+
 <li>
 Tax multiplier = -MPC/MPS.
-</li>
+
 <li>
 Balanced budget multiplier (used when G and T simultaneously increase or decrease by the same amount) = 1.
-</li>
+
 <li>
 Expansionary: G up or T down =&gt; AD up =&gt; Y up =&gt; MD up =&gt; r up =&gt; I down =&gt; Y down.
-</li>
+
 <ul>
 <li>
 r up =&gt; increased demand for the domestic currency for investment purposes =&gt; appreciation of the domestic currency =&gt; export down, import up =&gt; net exports down, partially offsetting the initial expand.
-</li>
+
 <li>
 final effect: r up, Y up, I down.
-</li>
+
 <li>
 expansionary fiscal policies will move the economy towards deficit (since G up or T down).
-</li>
+
 </ul>
 </ul>
 
@@ -53,35 +57,35 @@ expansionary fiscal policies will move the economy towards deficit (since G up o
 <ul>
 <li>
 Deficit = G - T
-</li>
+
 <li>
 Money Multiplier: total deposit = new deposit * money multiplier.
-</li>
+
 <ul>
 <li>
 = 1/(required reserve ratio)
-</li>
+
 </ul>
 <li>
 Expansionary: MS up =&gt; r down =&gt; I up =&gt; AD up =&gt; Y up =&gt; MD up =&gt; r up
-</li>
+
 <ul>
 <li>
 Final effect: r down, Y up, I up.
-</li>
+
 <li>
 Three ways to expand:
-</li>
+
 <ol>
 <li>
 decrease the required reserve ratio
-</li>
+
 <li>
 decrease the discount rate for banks
-</li>
+
 <li>
 buy bonds (securities)
-</li>
+
 </ol>
 </ul>
 </ul>
@@ -90,18 +94,18 @@ buy bonds (securities)
 <ul>
 <li>
 Two expansionary policies, for example, can be used together: fiscal(r up, I down) + monetary(r down, I up).
-</li>
+
 </ul>
 
 <h1 id="toc_5">Formulae and Measures</h1>
 <ul>
 <li>
 CPI = Total Cost of market basket this year / Total Cost of market basket last year
-</li>
+
 <ul>
 <li>
 If CPI down, that means the currency appreciates (use less amount of currency to purchase the same basket)
-</li>
+
 </ul>
 </ul>
 <hr />
