--- a/html/MathJax with Vimwiki.html
+++ b/html/MathJax with Vimwiki.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>MathJax with Vimwiki - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>MathJax with Vimwiki - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Mathjax with Vimwiki</h1>
 <ul>
 <li>
@@ -26,19 +30,19 @@ Configure a footer or header template for Vimwiki, and refer to it in .vimrc. He
 
 &lt;/html&gt;
 </pre>
-</li>
+
 <li>
-Configure the above as you like. Pay attention to the delimiters you'd like to use. Refer to <a href="http://www.mathjax.org/docs/1.1/index.html">Mathjax's Documentation</a>. 
-</li>
+Configure the above as you like. Pay attention to the delimiters you'd like to use. Refer to [<a href="http://www.mathjax.org/docs/1.1/index.html">http://www.mathjax.org/docs/1.1/index.html</a> Mathjax's Documentation]. 
+
 <li>
 Here I use single-dollar for inline display, and double-dollar for displaymath.
-</li>
+
 <li>
 Edit the file ~/.vim/autoload/vimwiki_html.vim; comment all lines relating to the <code>s:tag_super</code> function. Refer to here: <a href="http://code.google.com/p/vimwiki/wiki/GuestBook">http://code.google.com/p/vimwiki/wiki/GuestBook</a>
-</li>
+
 <li>
-NOTE: I did not use the method <a href="http://code.google.com/p/vimwiki/wiki/MathematicsWithMathJax">here</a>. Use it with care.
-</li>
+NOTE: I did not use the method [<a href="http://code.google.com/p/vimwiki/wiki/MathematicsWithMathJax">http://code.google.com/p/vimwiki/wiki/MathematicsWithMathJax</a> here]. Use it with care.
+
 </ul>
 
 <p>
@@ -47,10 +51,10 @@ Useful links
 <ul>
 <li>
 <a href="http://www.mathjax.org/docs/1.1/tex.html">http://www.mathjax.org/docs/1.1/tex.html</a>
-</li>
+
 <li>
 <a href="http://www.mathjax.org/docs/1.1/options/tex2jax.html#configure-tex2jax">http://www.mathjax.org/docs/1.1/options/tex2jax.html#configure-tex2jax</a>
-</li>
+
 </ul>
 <hr />
 <p>
