--- a/html/Microeconomics.html
+++ b/html/Microeconomics.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Microeconomics Notes - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Microeconomics Notes - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <p>
 <strong><span class="todo">TODO:</span> Graphs!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</strong>
 </p>
@@ -14,79 +18,79 @@
 <ul>
 <li>
 comparative advantage: the one who has smaller opportunity cost of one product
-</li>
+
 <li>
 returns to scale: refers to changes in output resulting from a proportional change in all inputs (where all inputs increase by a constant factor).
-</li>
+
 <li>
 Demand curves for private goods are added <strong>horizontally</strong>; whereas those for public goods are added <strong>vertically</strong>.
-</li>
+
 <li>
 cross-price elasticity = %d(quantity demanded of X) / %d(price of Y).
-</li>
+
 <ul>
 <li>
 &lt; 0, compliments; &gt; 0, substitutes.
-</li>
+
 </ul>
 <li>
 Defining characteristic of a capitalistic economy: private ownership &amp; protection of property rights.
-</li>
+
 <li>
 progressive tax: more tax on richer, redistribute income; regressive: more tax on poor.
-</li>
+
 <li>
 Opportunity cost of STH = direct price of STH + implicit cost
-</li>
+
 <li>
 The substitution effect is when the price of one good rises, and the consumer buys more of the cheaper good.
-</li>
+
 <li>
 The income effect is when the consumer cuts back on all goods, not simply the good that has become more expensive.
-</li>
+
 <li>
 estate and gift taxes: if these taxes are high, they help achieve greater income equality.
-</li>
+
 </ul>
 
 <h1 id="toc_2">Efficiency</h1>
 <ul>
 <li>
 <strong>efficiency in production</strong>: MP_k / r = MP_l / w (MP = marginal product).
-</li>
+
 <li>
 <strong>distributive efficiency</strong> (maximizing utility): Price_1 / Price_2 = MU_1 / MU_2 (MU = marginal utility)
-</li>
+
 <ul>
 <li>
 MU_1 / MU_2 -&gt; marginal rate of substitution (MRS)
-</li>
+
 <li>
 formal condition: MRS are equal for every consumer.
-</li>
+
 </ul>
 <li>
 <strong>allocative efficiency</strong>: P = MC (long run perfect competition).
-</li>
+
 <li>
 <strong>productive efficiency</strong>: P = minATC
-</li>
+
 </ul>
   
 <h1 id="toc_3">Laws</h1>
 <ul>
 <li>
 <strong>law of diminishing marginal utility (short run)</strong>: decreasing satisfaction gained from additional units of a good consumed in a given period.
-</li>
+
 <li>
 law of demand; law of supply.
-</li>
+
 <li>
 marginal cost will increase as the production expands (supply)
-</li>
+
 <li>
 law of diminishing marginal product (consider the MP curve): first increase at increasing rate, then increase at decreasing rate, then decrease.
-</li>
+
 </ul>
 
 <h1 id="toc_4">Demand and Supply</h1>
@@ -101,13 +105,13 @@ law of diminishing marginal product (consider the MP curve): first increase at i
 <ul>
 <li>
 decrease in input costs; improv. in tech.; expectations of lower prices in the future; increase in sellers; 
-</li>
+
 <li>
 decrease in the price of a "substitue in production" (milk &amp; cheese)
-</li>
+
 <li>
 increase in the price of a "joint product" (leather &amp; beef)<br />
-</li>
+
 </ul>
 
 <p>
@@ -120,10 +124,10 @@ increase in the price of a "joint product" (leather &amp; beef)<br />
 <ul>
 <li>
 to have effect, must below eq. price
-</li>
+
 <li>
 may cause (1) queuing cost; (2) black market.
-</li>
+
 </ul>
 
 <p>
@@ -132,30 +136,30 @@ may cause (1) queuing cost; (2) black market.
 <ul>
 <li>
 to have effect, must above eq. price
-</li>
+
 <li>
 Example: minimum rage; some workers benefit, others are hurt
-</li>
+
 </ul>
 
 <h1 id="toc_5">Costs, Production, Supply</h1>
 <ul>
 <li>
 Values of a large-size firm: (1) hire more experts (2) spread over fixed costs over large outputs (3) economies of scale
-</li>
+
 <li>
 Excess capacity exists whenever firms/markets don't operate at socially optimal level (P = MC).
-</li>
+
 <li>
 PPF
-</li>
+
 <ul>
 <li>
 If resources are substitutable, PPF would be a straight line.
-</li>
+
 <li>
 Straght PPF implies no specialization; Curved PPF implies specialization.
-</li>
+
 </ul>
 </ul>
 
@@ -163,164 +167,164 @@ Straght PPF implies no specialization; Curved PPF implies specialization.
 <ul>
 <li>
 In LR: P = MR = MC = min ATC; zero profits.
-</li>
+
 <li>
 In SR: only P = MR.
-</li>
+
 <li>
 When <code>P &gt; AVC</code>, continue production. When <code>MR &gt; MC</code>, increase production.
-</li>
+
 <li>
 MC curve is actually the firm's supply curve (representing at each price the quantity the firm is willing to supply).
-</li>
+
 <li>
 In SR: Since P = MC and if P &lt; AVC then firm will shut down, in SR the supply curve is actually the MC curve above the AVC.
-</li>
+
 <li>
 In LR: the supply curve is actually the MC curve above the ATC.
-</li>
+
 <li>
 <strong>Demand increase</strong> -&gt; firms enter -&gt; supply increase -&gt; <strong>price returns to original</strong>, quantity supplied by industry increases; whereas quantity supplied by individual firm remains the same
-</li>
+
 <li>
 Reasons that ATC is U-shaped: spreading total fixed cost over a larger output + eventually diminishing returns.
-</li>
+
 </ul>
 
 <h1 id="toc_7">Monopoly</h1>
 <ul>
 <li>
 <strong>monopoly pricing power (control over prices; market power)</strong>: P &gt; MC; pricing strategy: P &gt; MR.
-</li>
+
 <li>
 break even = zero profits = fair return price.
-</li>
+
 <li>
 socially optimal price = P = MC.
-</li>
+
 <li>
 shut-down (short-run): P &lt; AVC. exit (long run): P &lt; ATC.
-</li>
+
 <li>
 Reasons that price discrimination occurs:
-</li>
+
 <ol>
 <li>
 control over prices
-</li>
+
 <li>
 seperated buyers of differing price elasticities
-</li>
+
 <li>
 can prevent re-saling among buyers
-</li>
+
 </ol>
 <li>
 <a href="comparison between monoplies.html">comparison between monoplies</a>
-</li>
+
 </ul>
 
 <h1 id="toc_8">Monopolistic Competition</h1>
 <ul>
 <li>
 <a href="Mono. Comp. in LR.html">Mono. Comp. in LR</a>; LR normal profit.
-</li>
+
 <li>
 economic profit in SR.
-</li>
+
 </ul>
 
 <h1 id="toc_9">Oligopoly</h1>
 <ul>
 <li>
 Cartel model: all the firms in the industry act in unison to set a monopoly price; e.g. OPEC.
-</li>
+
 </ul>
 
 <h1 id="toc_10">Resource Markets with Applications to Labor</h1>
 <ul>
 <li>
 MFC (marginal factor cost; supply S = MFC when in perfect competition) = MRC (marginal revenue cost)
-</li>
+
 <li>
 <strong>MRP (marginal revenue product; demand D = MRP = MP marginal product times P price) = MRC</strong> is an analogy to <strong>MR = MC</strong>. If MRP &gt; MRC, continue to hire additional units of labor.
-</li>
+
 <li>
 wage elasticity of demand (= %d(quantity demanded of labor) / %d(wage rate))
-</li>
+
 <ol>
 <li>
 The higher the price elasticity of demand for the product, the higher the wage elasticity of demand.
-</li>
+
 <li>
 The higher the proportion of labor costs relative to total costs of production, the higher will be the wage elasticity of demand.
-</li>
+
 <li>
 The greater the number of substitute resources available and the degree to which they are substitutable, the higher will be the wage elasticity of demand.
-</li>
+
 </ol>
 <li>
 <strong>perfectly competitive resource (labor) market</strong>
-</li>
+
 <ul>
 <li>
 wage rate constant
-</li>
+
 </ul>
 <li>
 <strong>imperfectly competitive resource (labor) market (monopsony)</strong>
-</li>
+
 <ul>
 <li>
 compared to perfect market, wage rate and units of labor are both lowered
-</li>
+
 </ul>
 <li>
 cost minimization: MPP_L / MRC_L = MPP_K / MRC_K (L = labor; K = capital), or MPP_L / P_L = MPP_K / P_K in perfect competition.
-</li>
+
 <li>
 profit maximization: MRP_L / MRC_L = MRP_K / MRC_K = 1, or MRP_L / P_L = MRP_K / P_K = 1 in perfect competition.
-</li>
+
 <li>
 If price of product increase, only demand for such labor increase.
-</li>
+
 </ul>
 
 <h1 id="toc_11">Profit, Price</h1>
 <ul>
 <li>
 accounting profit: does not count opportunity cost (implicit cost); economic profit: counts.
-</li>
+
 <ul>
 <li>
 i.e. economic profit = accounting profit - opportunity cost
-</li>
+
 </ul>
 <li>
 All types of market maximize <strong>profits</strong> by producing where MR = MC.
-</li>
+
 <li>
 All types of market maximize <strong>revenue</strong> by producing at MR = 0.
-</li>
+
 </ul>
 
 <h1 id="toc_12">Public Goods, Externality</h1>
 <ul>
 <li>
 public goods: nonrival in consumption, nonexcludability
-</li>
+
 <li>
 MSC = MEC + MPC.
-</li>
+
 <li>
 Positive externalities will improve efficiency when MC &lt; MB.
-</li>
+
 <li>
 Pos Ext: producer produces more than socially efficient level
-</li>
+
 <li>
 Graph
-</li>
+
 </ul>
 <hr />
 <p>
