--- a/html/Modeling.html
+++ b/html/Modeling.html
@@ -1,13 +1,17 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Modeling - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Modeling - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <p>
-In Nov 2011, I participate in <a href="http://www.comap.com/highschool/contests/himcm/">HiMCM 2011</a>, solving Problem A. The judge results will come out in Feb 2012.
+In Nov 2011, I participate in [<a href="http://www.comap.com/highschool/contests/himcm/">http://www.comap.com/highschool/contests/himcm/</a> HiMCM 2011], solving Problem A. The judge results will come out in Feb 2012.
 <hr />
 Created Date: November 20, 2011 22:35:30<br />
 Last Modified: November 21, 2011 10:01:51 
