--- a/html/NLP Notes.html
+++ b/html/NLP Notes.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>NLP Notes - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>NLP Notes - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">NLP Notes</h1>
 
 <p>
@@ -15,8 +19,8 @@ Since Apr 2012 I have been taking Coursera.org's online NLP course, offered by S
 <h2 id="toc_1.1">Notes</h2>
 <ul>
 <li>
-Maximum Entropy (Maxent) models. (<a href="http://me.geotakucovi.com/maxent.html">html</a> | <a href="http://me.geotakucovi.com/maxent.pdf">pdf</a>)
-</li>
+Maximum Entropy (Maxent) models. ([<a href="http://me.geotakucovi.com/maxent.html">http://me.geotakucovi.com/maxent.html</a> html] | [<a href="http://me.geotakucovi.com/maxent.pdf">http://me.geotakucovi.com/maxent.pdf</a> pdf])
+
 </ul>
 
 <hr />
