--- a/html/NOIP 2011 Prep.html
+++ b/html/NOIP 2011 Prep.html
@@ -1,15 +1,19 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>My Preparation for NOIP 2011 - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>My Preparation for NOIP 2011 - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">My Preparation for NOIP 2011</h1>
 <p>
-All codes will be pushed to here: <a href="https://github.com/concretevitamin/2011codes">https://github.com/concretevitamin/2011codes</a>.
-Check out my notes on my OI (Olympiad in Informatics) Blog: <a href="http://geotakucovi.com/oi/">http://geotakucovi.com/oi/</a>.
+All codes will be pushed to here: <a href="https://github.com/concretevitamin/2011codes.">https://github.com/concretevitamin/2011codes.</a>
+Check out my notes on my OI (Olympiad in Informatics) Blog: <a href="http://geotakucovi.com/oi/.">http://geotakucovi.com/oi/.</a>
 </p>
 
 <p>
@@ -23,7 +27,7 @@ SGU 175: simple math/simulation/backtracking/string.
 
 <p>
 Oct 30<br />
-SGU 181: Wrong answer on test 39... $x_0 = A, x_i = (a * x_{i}^{2} + b * x_i + c) % M.$ Find $x_k$.
+SGU 181: Wrong answer on test 39... \(x_0 = A, x_i = (a * x_{i}^{2} + b * x_i + c) % M.\) Find \(x_k\).
 </p>
 
 <p>
