--- a/html/NOIP Notes.html
+++ b/html/NOIP Notes.html
@@ -1,27 +1,31 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>NOIP Notes</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>NOIP Notes</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <p>
 CPU
 </p>
 <ul>
 <li>
 控制器
-</li>
+
 <li>
 运算器
-</li>
+
 <li>
 寄存器
-</li>
+
 <li>
 算术逻辑单元 ALU
-</li>
+
 </ul>
 
 <p>
@@ -30,10 +34,10 @@ CPU
 <ul>
 <li>
 SQL
-</li>
+
 <li>
 二维表为主
-</li>
+
 </ul>
 
 <p>
@@ -42,10 +46,10 @@ SQL
 <ul>
 <li>
 k 转 10: 整数部分和小数部分直接乘 k 的次幂
-</li>
+
 <li>
 10 转 k: 整数部分做除法逆向取余, 小数部分乘 k 正向取整数部分
-</li>
+
 </ul>
 
 <p>
@@ -54,7 +58,7 @@ k 转 10: 整数部分和小数部分直接乘 k 的次幂
 <ul>
 <li>
 NOI 比 IOI 早 5 年举行
-</li>
+
 </ul>
 
 <p>
@@ -63,10 +67,10 @@ NOI 比 IOI 早 5 年举行
 <ul>
 <li>
 随机存取存储器 RAM：断电不能保存数据
-</li>
+
 <li>
 只读存储器 ROM：断电可以保存数据
-</li>
+
 </ul>
 
 <p>
@@ -76,16 +80,16 @@ NOI 比 IOI 早 5 年举行
 <ul>
 <li>
 最高有效位当成符号位，0 为 正，1 为负
-</li>
+
 <li>
 正数的原、反、补一样
-</li>
+
 <li>
 负数的反码：符号位不动，其余各位取反
-</li>
+
 <li>
 负数的补码：其反码+1
-</li>
+
 </ul>
 
 <p>
@@ -94,10 +98,10 @@ NOI 比 IOI 早 5 年举行
 <ul>
 <li>
 将所有待比较数值(正整数)统一为同样的数位长度,数位较短的数前面补零. 然后, 从最低位开始, 依次进行一次排序.这样从最低位排序一直到最高位排序完成以后, 数列就变成一个有序序列.
-</li>
+
 <li>
 非原地排序
-</li>
+
 </ul>
 
 <p>
@@ -111,7 +115,7 @@ Java
 <ul>
 <li>
 既可被解释，也可被编译
-</li>
+
 </ul>
 
 <p>
@@ -120,10 +124,10 @@ Java
 <ul>
 <li>
 易失性：RAM
-</li>
+
 <li>
 不易失性：ROM, 闪存
-</li>
+
 </ul>
 
 </body>
