--- a/html/Pastebin.html
+++ b/html/Pastebin.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Pastebin</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Pastebin</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <hr />
 <p>
 :set tw=99999
@@ -39,10 +43,10 @@ gp gq gu gU
 </p>
 
 <p>
-[22:51:14] &lt;<a href="ConcreteVitamin.html">ConcreteVitamin</a>&gt; Is there a way to quickly switch between tags in a help file? (e.g. using tab to focus next element in a webpage)
+[22:51:14] &lt;ConcreteVitamin&gt; Is there a way to quickly switch between tags in a help file? (e.g. using tab to focus next element in a webpage)
 [22:56:38] &lt;scandal&gt; you can sort of fake it by searching for \<strong>.</strong>\*  .  not sure if there is a better way
-[23:00:20] &lt;jerojasro&gt; <a href="ConcreteVitamin.html">ConcreteVitamin</a>: <a href="http://git.devnull.li/vim-jerojasro.git/?a=blob;f=local-settings/ftplugin/help.vim;hb=HEAD">http://git.devnull.li/vim-jerojasro.git/?a=blob;f=local-settings/ftplugin/help.vim;hb=HEAD</a>
-[23:02:20] &lt;<a href="SuperG1134.html">SuperG1134</a>&gt; Hi
+[23:00:20] &lt;jerojasro&gt; ConcreteVitamin: <a href="http://git.devnull.li/vim-jerojasro.git/?a=blob;f=local-settings/ftplugin/help.vim;hb=HEAD">http://git.devnull.li/vim-jerojasro.git/?a=blob;f=local-settings/ftplugin/help.vim;hb=HEAD</a>
+[23:02:20] &lt;SuperG1134&gt; Hi
 [23:03:21] &lt;jerojasro&gt; those mappings let you: hit enter over a tag name, jump to it. Use J and K to jump to next/previous tag in a help file
 </p>
 
@@ -55,7 +59,7 @@ gp gq gu gU
 
 
 <p>
-[11:29:02] &lt;<a href="ConcreteVitamin.html">ConcreteVitamin</a>&gt; Every time I finish converting, A-Tab to Filezilla and select all the html files, and then Alt-Down to upload
+[11:29:02] &lt;ConcreteVitamin&gt; Every time I finish converting, A-Tab to Filezilla and select all the html files, and then Alt-Down to upload
 [11:29:06] &lt;Araxia&gt; i used an svn server. i just set the mime types to text/html and checked them in and boom, instant website.
 </p>
 
