--- a/html/Physics.html
+++ b/html/Physics.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Physics - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Physics - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Physics</h1>
 <p>
 todo: modern physics (famous experiments); go through the real multiple tests
@@ -17,10 +21,10 @@ todo: modern physics (famous experiments); go through the real multiple tests
 <ul>
 <li>
 <a href="Capacitance.html">Capacitance</a>
-</li>
+
 <li>
 Two conductors, one charged and the other uncharged, have the same charge after touching if and only if they have the same size.
-</li>
+
 </ul>
 
 <p>
@@ -37,22 +41,22 @@ Two conductors, one charged and the other uncharged, have the same charge after 
 <ul>
 <li>
 <a href="on fundamental frequency.html">on fundamental frequency</a>
-</li>
+
 <li>
 transverse wave traveling towards a fixed end, a rigid object, will be reflected back on the opposite side of the string from the incident pulse. Speed, amplitude constant.
-</li>
+
 <li>
 <a href="doppler effect.html">doppler effect</a>
-</li>
+
 <li>
 Light: electromagnetic wave, mechanical?
-</li>
+
 <li>
 longitudinal wave: sound; not easily polarized
-</li>
+
 <li>
 transverse wave: electromagnetic; can be polarized
-</li>
+
 </ul>
 
 <p>
@@ -61,7 +65,7 @@ transverse wave: electromagnetic; can be polarized
 <ul>
 <li>
 Work done <em>on</em> the gas: W = -P * (delta V)
-</li>
+
 </ul>
 
 <p>
@@ -70,7 +74,7 @@ Work done <em>on</em> the gas: W = -P * (delta V)
 <ul>
 <li>
 In <strong>Bernoulli's equation</strong>, <code>h_1</code> and <code>h_2</code> are relative heights (relative to a zero height point).
-</li>
+
 </ul>
 
 <p>
@@ -79,10 +83,10 @@ In <strong>Bernoulli's equation</strong>, <code>h_1</code> and <code>h_2</code> 
 <ul>
 <li>
 radius of curvature = 2f
-</li>
+
 <li>
 magnification: h_i / h_o = d_i / d_o
-</li>
+
 </ul>
 
 <p>
@@ -91,50 +95,50 @@ magnification: h_i / h_o = d_i / d_o
 <ul>
 <li>
 K_{max} = hf - \phi; \phi: work function of the metal surface.
-</li>
+
 <li>
 eV = K_{max}; V: stopping potential; <strong>2005 Q7</strong>
-</li>
+
 <ul>
 <li>
 this is because the definition of 1eV is the work required to move a charge e through a potential difference V.
-</li>
+
 </ul>
 <li>
 energy of a particular photon: E = hf.
-</li>
+
 <li>
 momemtum of a photon: p = mv = h / lamda.
-</li>
+
 <li>
 <strong>rest energy of a particle</strong>: E = mc^2.
-</li>
+
 <li>
 mass defect: mass of reactants - mass of products
-</li>
+
 <li>
 In nuclear reactions:
-</li>
+
 <ul>
 <li>
 If energy occurs, number of neutrons &amp; protons is not conserved, only charge is conserved;
-</li>
+
 <li>
 If energy does not occur, those &amp; charge are conserved.
-</li>
+
 </ul>
 <li>
 beta particles: atomic number -1, atomic mass number 0.
-</li>
+
 <li>
 gamma ray: no mass.
-</li>
+
 <li>
 <a href="famous experiments.html">famous experiments</a>
-</li>
+
 <li>
 frequency: UV &gt; visible &gt; IR; therefore in terms of levels of energy states, UV &lt; visible &lt; IR (the higher the energy states, the lower the frequencys)
-</li>
+
 </ul>
 
 <p>
@@ -143,20 +147,20 @@ frequency: UV &gt; visible &gt; IR; therefore in terms of levels of energy state
 <ol>
 <li>
 <a href="thin film interference.html">thin film interference</a>
-</li>
+
 <li>
 <a href="electric potential.html">electric potential</a>
-</li>
+
 <li>
 <a href="double slit.html">double slit</a>
-</li>
+
 <li>
 estimate focal length of a converging lens (2007 Q6): focus the image of the distant tree to a screen, and the focal length is approximately the distance between the lens and the image.
-</li>
+
 <ul>
 <li>
 for the typical graph problem, sometimes we need not choose 2 points of the best-fit line. 1 point may be sufficient.
-</li>
+
 </ul>
 </ol>
 
@@ -166,7 +170,7 @@ for the typical graph problem, sometimes we need not choose 2 points of the best
 <ul>
 <li>
 Quantum transitions that result in the characteristic sharp lines of the X-ray spectrum always involve: the inner electron shells.
-</li>
+
 </ul>
 <hr />
 <p>
