--- a/html/Prim.html
+++ b/html/Prim.html
@@ -1,21 +1,25 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Prim</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Prim</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <p>
 Prim
 </p>
 <ul>
 <li>
 Greedy
-</li>
+
 <li>
 Starts from a source. Maintain f[i], which records the minimum distance node i is from the subtree of some minimum spanning tree being developed. Each step adds a node x to the subtree where f[x] = min{f[i] | i \in V-G}
-</li>
+
 </ul>
 
 </body>
