--- a/html/ProjectEuler.html
+++ b/html/ProjectEuler.html
@@ -1,17 +1,21 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Project Euler - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Project Euler - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <p>
-<a href="http://projecteuler.net/problems">Project Euler</a> is a good way to get you acquianted with a new programming language.
+[<a href="http://projecteuler.net/problems">http://projecteuler.net/problems</a> Project Euler] is a good way to get you acquianted with a new programming language.
 </p>
 
 <p>
-I push my codes for the problems to <a href="https://github.com/concretevitamin/ProjectEuler">Github</a> as I learn Python and some other fancy languages! :)
+I push my codes for the problems to [<a href="https://github.com/concretevitamin/ProjectEuler">https://github.com/concretevitamin/ProjectEuler</a> Github] as I learn Python and some other fancy languages! :)
 </p>
 
 <hr />
