--- a/html/Statistics.html
+++ b/html/Statistics.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Statistics - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Statistics - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <p>
 <a href="Tests on Ti-84.html">Tests on Ti-84</a>
 </p>
@@ -14,23 +18,23 @@
 <ul>
 <li>
 Look for reasons behind modes and outliers.
-</li>
+
 <li>
 <em>Normal distribution</em>: bell-shaped, symmetric, has an infinite base.
-</li>
+
 <li>
 t-distribution: used when the population standard deviation is unknown. Conditions: population is normal OR n is large enough (&gt;= 30).
-</li>
+
 <li>
 z-distribution: normal distribution. Used when the population standard deviation is known.
-</li>
+
 </ul>
 
 <h1 id="toc_2">Questions</h1>
 <ol>
 <li>
 What's the difference between <em>Bar Charts</em> and <em>Histograms</em>?
-</li>
+
 </ol>
 
 <h1 id="toc_3">Topics Notes</h1>
@@ -40,36 +44,36 @@ What's the difference between <em>Bar Charts</em> and <em>Histograms</em>?
 <ul>
 <li>
 Dotplots (qualitative; i.e. categorical)
-</li>
+
 <li>
 Bar Charts (qualitative; i.e. categorical)
-</li>
+
 <li>
 <strong>Histogram 直方图</strong>: use Frequency or Relative Frequency. Data fall in a interval, missing <em>exact values</em>.
-</li>
+
 <li>
 <strong>Cumulative Frequency Plots (ogive)</strong>
-</li>
+
 <li>
 Stemplots: gives the shape of histogram, but also indicates exact values.
-</li>
+
 <li>
 Center, Spread (described together)
-</li>
+
 <li>
 Cluster, Gap
-</li>
+
 <ul>
 <li>
 Outliers: extreme value.
-</li>
+
 </ul>
 <li>
 Modes: peaks. (unimodal, bimodal, etc.)
-</li>
+
 <li>
 Shape: <em>symmetric</em>, <em>skewed to left/right</em>.
-</li>
+
 </ul>
 
 <p>
@@ -78,43 +82,43 @@ Shape: <em>symmetric</em>, <em>skewed to left/right</em>.
 <ul>
 <li>
 median, mean
-</li>
+
 <li>
 variability, or dispersion, of the measurements
-</li>
+
 <ul>
 <li>
 range, difference between maximum and minimum
-</li>
+
 <li>
 interquartile range, IQR, diff between max and min after removing the lower and upper quarters, i.e., range of middle 50%
-</li>
+
 <ul>
 <li>
 often, values outside 1.5 * IQR are considered as outliers.
-</li>
+
 <li>
 Q1, Q3
-</li>
+
 </ul>
 <li>
 variance, 方差
-</li>
+
 <li>
 standard deviation, 标准差, square root of the variance
-</li>
+
 </ul>
 <li>
 simple ranking; percentile ranking; z-score (= (Value - Mean) / (Standard_deviation))
-</li>
+
 <ul>
 <li>
 deciles, 10% and 90%
-</li>
+
 </ul>
 <li>
 empirical rule (applied to bell-shaped data): 68, 95, 99.7 (symmetric bell-shaped data); standard deviation is between 1/4 and 1/6 of range.
-</li>
+
 </ul>
 
 <p>
@@ -123,26 +127,26 @@ empirical rule (applied to bell-shaped data): 68, 95, 99.7 (symmetric bell-shape
 <ul>
 <li>
 "The regression line for a residual plot is a horizontal line."
-</li>
+
 <ul>
 <li>
 Consider the original regression line as a transformed x-axis. Thus, the residuals (vertical distances) can be considered as equally distributed points near the x-axis, for they differ corresponding perpendicular distances from a trigonometric constant. Therefore, as long as the residuals are calculated from a linear regression line, the regression line for a residual plot is horizontal.
-</li>
+
 </ul>
 <li>
 The correlation coefficient is not changed by adding the same number to each value of one of the variables or by multiplying each value of one of the variables by the same positive number. This can be proved by definitions.
-</li>
+
 <ul>
 <li>
 If multiplied by a negative number (= change the sign of the slope to be minus), r' is negative.
-</li>
+
 </ul>
 <li>
 Use <code>Range / 4</code> to estimate standard deviation.
-</li>
+
 <li>
 <code>R-Sq</code> imples R (correlation) squared, namely coefficient of determination.
-</li>
+
 </ul>
 
 <p>
@@ -151,13 +155,13 @@ Use <code>Range / 4</code> to estimate standard deviation.
 <ul>
 <li>
 A sample survey is an observational study, but not an experiment.
-</li>
+
 <li>
 Control group (对照组): untreated.
-</li>
+
 <li>
 If treatments are imposed, experiments take place.
-</li>
+
 </ul>
 
 <p>
@@ -166,36 +170,36 @@ If treatments are imposed, experiments take place.
 <ul>
 <li>
 <code>2nd+DISTR -&gt; binompdf(numtrials, p: success, x: number of successes)</code>, binomial probability.
-</li>
+
 <ul>
 <li>
 <code>binomcdf(n, p, x)</code>: at least x successes.
-</li>
+
 </ul>
 <li>
 1 billion = 10^9.
-</li>
+
 <li>
 variance of X = <code>Sum{(x_i - u)^2*p_i}</code>.
-</li>
+
 <li>
 Independent -&gt; no overlapping.
-</li>
+
 <li>
 Insurance companies make a profit because of: the law of large numbers.
-</li>
+
 <li>
 <code>P(A intersect B)</code> means that both A and B occur; <code>P(A union B)</code> means that either A or B or both occur.
-</li>
+
 <li>
 Mean of binomial variable X = <code>np</code>, where <code>n</code> is number of trials and <code>p</code> is probability of success.
-</li>
+
 <li>
 The histogram of a binomial distribution with p = .9 is almost symmetric if n is very large. The histogram of a binomial distribution with p = .5 is always symmetric no matter what n, the number of trials, is. The histogram of a binomial distribution with p = .9 is skewed to the left.
-</li>
+
 <li>
 <a href="Summary of transforming and combining variables.html">Summary of transforming and combining variables</a>
-</li>
+
 </ul>
  
 <p>
@@ -204,10 +208,10 @@ The histogram of a binomial distribution with p = .9 is almost symmetric if n is
 <ul>
 <li>
 Normal Distribution: unimodal + symmetric.
-</li>
+
 <li>
 When <code>np &gt; 10</code> and <code>n(1-p) &gt; 10</code>, we can use Normal to estimate Binomial.
-</li>
+
 </ul>
 
 <p>
@@ -216,67 +220,67 @@ When <code>np &gt; 10</code> and <code>n(1-p) &gt; 10</code>, we can use Normal 
 <ul>
 <li>
 The larger the sample, the smaller the spread in sampling distribution.
-</li>
+
 <li>
 If population size &gt;&gt; sample size, the spread of the sampling distribution is about the same no matter what the population size.
-</li>
+
 </ul>
 
 <ul>
 <li>
 <strong>Sample Means</strong>
-</li>
+
 <ul>
 <li>
 mean: Mu, std: STD/sqrt(n)
-</li>
+
 </ul>
 <li>
 <strong>Sample Proportions</strong>
-</li>
+
 <ul>
 <li>
 mean: p, std: sqrt(p(1-p)/n)
-</li>
+
 <li>
 this distribution makes use of using normal to estimate binomial.
-</li>
+
 <li>
 conditions: np &amp; n(1-p) &gt; 10 (when this is satisfied, the dis is close to normal); simple random sample; n &lt;= 0.1 * N
-</li>
+
 </ul>
 <li>
 <strong>Difference of sample means</strong>
-</li>
+
 <ul>
 <li>
-mean: Mu_1 - Mu_2, std: sqrt(STD1^2/n1 + STD2^2/n2)
-</li>
+mean: Mu_1 - Mu_2, std: sqrt(STD1<sup><small>2/n1 + STD2</small></sup>2/n2)
+
 </ul>
 <li>
 <strong>Difference of sample proportions</strong>
-</li>
+
 <ul>
 <li>
 mean: p_1 - p_2; std: sqrt(p1(1-p1)/n1 + p2(1-p2)/n2)
-</li>
+
 <li>
 conditions: all np and n(1-p) &gt; 10.
-</li>
+
 </ul>
 </ul>
 
 <ul>
 <li>
 The above four are all unbiased estimators because the means of their distribution are equal to the population parameters.
-</li>
+
 <li>
 T-distributions are bell-shaped and symmetric, and have greater spread than the Normal distributions.
-</li>
+
 <ul>
 <li>
 The smaller the df value, the larger the dispersion in the distribution. The larger the df value, that is, the larger the sample size, the closer the distribution to the normal distribution.
-</li>
+
 </ul>
 </ul>
 
