--- a/html/The Adventures of Huckleberry Finn.html
+++ b/html/The Adventures of Huckleberry Finn.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>The Adventures of Huckleberry Finn</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>The Adventures of Huckleberry Finn</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <p>
 Written by <a href="Mark Twain.html">Mark Twain</a>.
 </p>
@@ -13,34 +17,34 @@ Written by <a href="Mark Twain.html">Mark Twain</a>.
 <h1>Table of Contents</h1>
 <div class="toc">
 <ul>
-<li><a href="#toc_1">Notes</a></li>
+<li><a href="#toc_1">Notes</a>
 <ul>
-<li><a href="#toc_1.0.0.1">xxii</a></li>
-<li><a href="#toc_1.0.0.2">xxiii</a></li>
-<li><a href="#toc_1.0.0.3">xxiv</a></li>
-<li><a href="#toc_1.0.0.4">xxv</a></li>
-<li><a href="#toc_1.0.0.5">xxvi</a></li>
-<li><a href="#toc_1.0.0.6">xxvii</a></li>
-<li><a href="#toc_1.0.0.7">xxviii</a></li>
-<li><a href="#toc_1.0.0.8">xxix</a></li>
-<li><a href="#toc_1.0.0.9">xxx</a></li>
-<li><a href="#toc_1.0.0.10">xxxi</a></li>
-<li><a href="#toc_1.0.0.11">xxxii</a></li>
-<li><a href="#toc_1.0.0.12">xxxiii.</a></li>
-<li><a href="#toc_1.0.0.13">xxxiv .</a></li>
-<li><a href="#toc_1.0.0.14">xxxv.</a></li>
-<li><a href="#toc_1.0.0.15">xxxvi.</a></li>
-<li><a href="#toc_1.0.0.16">xxxvii.</a></li>
-<li><a href="#toc_1.0.0.17">xxxviii.</a></li>
-<li><a href="#toc_1.0.0.18">xxxix.</a></li>
-<li><a href="#toc_1.0.0.19">xl.</a></li>
-<li><a href="#toc_1.0.0.20">xli.</a></li>
-<li><a href="#toc_1.0.0.21">xlii.</a></li>
-<li><a href="#toc_1.0.0.22">chap the last.</a></li>
+<li><a href="#toc_1.0.0.1">xxii</a>
+<li><a href="#toc_1.0.0.2">xxiii</a>
+<li><a href="#toc_1.0.0.3">xxiv</a>
+<li><a href="#toc_1.0.0.4">xxv</a>
+<li><a href="#toc_1.0.0.5">xxvi</a>
+<li><a href="#toc_1.0.0.6">xxvii</a>
+<li><a href="#toc_1.0.0.7">xxviii</a>
+<li><a href="#toc_1.0.0.8">xxix</a>
+<li><a href="#toc_1.0.0.9">xxx</a>
+<li><a href="#toc_1.0.0.10">xxxi</a>
+<li><a href="#toc_1.0.0.11">xxxii</a>
+<li><a href="#toc_1.0.0.12">xxxiii.</a>
+<li><a href="#toc_1.0.0.13">xxxiv .</a>
+<li><a href="#toc_1.0.0.14">xxxv.</a>
+<li><a href="#toc_1.0.0.15">xxxvi.</a>
+<li><a href="#toc_1.0.0.16">xxxvii.</a>
+<li><a href="#toc_1.0.0.17">xxxviii.</a>
+<li><a href="#toc_1.0.0.18">xxxix.</a>
+<li><a href="#toc_1.0.0.19">xl.</a>
+<li><a href="#toc_1.0.0.20">xli.</a>
+<li><a href="#toc_1.0.0.21">xlii.</a>
+<li><a href="#toc_1.0.0.22">chap the last.</a>
 </ul>
 </ul>
 </ul>
-<li><a href="#toc_2">Highlights</a></li>
+<li><a href="#toc_2">Highlights</a>
 </ul>
 </div>
 
