--- a/html/calculus.html
+++ b/html/calculus.html
@@ -1,37 +1,41 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Calculus Notes - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Calculus Notes - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Calculus</h1>
 
 <h2 id="toc_1.1">Rules, Definitions, Theorems about limits, derivatives, and integrals</h2>
 <ul>
 <li>
 <a href="epsilon-delta definition of limit.html">epsilon-delta definition of limit</a>
-</li>
+
 <li>
 <strong>L'Hôpital's Rule</strong>; <strong>Cauchy's mean value theorem</strong>;
   <a href="http://home.iitk.ac.in/~psraj/mth101/lecture_notes/lecture7.pdf">http://home.iitk.ac.in/~psraj/mth101/lecture_notes/lecture7.pdf</a> 
-</li>
+
 <ul>
 <li>
 Use CMVT to prove L'Hopital. Notice that L'Hopital can handle a few cases, whereas the 0/0 case is the generic one.
-</li>
+
 </ul>
 <li>
 <a href="Integration by parts.html">Integration by parts</a> (indefinite form &amp; definite form).
-</li>
+
 </ul>
 
 <h2 id="toc_1.2">Textbook</h2>
 <ul>
 <li>
 <strong>Don't</strong> use <em><strong>Thomas' Calculus</strong></em> It has <strong>disgusting arrangement of content</strong>, and it is only for non-math-major students.
-</li>
+
 </ul>
 <hr />
 <p>
