--- a/html/gcc.html
+++ b/html/gcc.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Notes On gcc/g++ - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Notes On gcc/g++ - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Options</h1>
 <pre>
   -E                       Preprocess only; do not compile, assemble or link
@@ -21,17 +25,17 @@
 <ul>
 <li>
 <code>-c</code> generates <code>.o</code>.
-</li>
+
 <li>
 <code>-S</code> generates <code>.s</code>, compiled "object files" (e.g., assembly source codes under Windows).
-</li>
+
 </ul>
 
 <h1 id="toc_2">Make and Makefiles</h1>
 <ul>
 <li>
 <a href="http://mrbook.org/tutorials/make/">http://mrbook.org/tutorials/make/</a>
-</li>
+
 </ul>
 <hr />
 <p>
