--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
 <title>Covi's Personal Knowledge Base Wiki</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
+
 <body>
 
 <h1 id="toc_1">Welcome to Covi's Personal Knowledge Base Wiki!</h1>
@@ -16,11 +19,11 @@
 </blockquote>
 
 <p>
-Hi! My name is <strong>Zongheng Yang</strong>, a high school senior in <a href="http://www.shenzhong.net">Shenzhen Middle School</a>, Shenzhen, China (<a href="http://maps.google.com/maps?q=shenzhen,+china&amp;hl=en&amp;client=firefox-a&amp;gl=us&amp;z=10&amp;vpsrc=0">Google Maps</a>). 
+Hi! My name is <strong>Zongheng Yang</strong>, a high school senior in [<a href="http://www.shenzhong.net">http://www.shenzhong.net</a> Shenzhen Middle School], Shenzhen, China ([<a href="http://maps.google.com/maps?q=shenzhen,+china&amp;hl=en&amp;client=firefox-a&amp;gl=us&amp;z=10&amp;vpsrc=0">http://maps.google.com/maps?q=shenzhen,+china&amp;hl=en&amp;client=firefox-a&amp;gl=us&amp;z=10&amp;vpsrc=0</a> Google Maps]). 
 </p>
 
 <p>
-This personal Wiki is constructed and maintained with <a href="http://www.vim.org/">Vim</a> + <a href="http://code.google.com/p/vimwiki/">Vimwiki</a> + <a href="http://git-scm.com">Git</a> and several other tools, which enable me to add something to my personal knowledge base within no more than 10 manipulative keystrokes, and yes, no mouse needed! Check out more here: <a href="About.html">About</a>.
+This personal Wiki is constructed and maintained with [<a href="http://www.vim.org/">http://www.vim.org/</a> Vim] + [<a href="http://code.google.com/p/vimwiki/">http://code.google.com/p/vimwiki/</a> Vimwiki] + [<a href="http://git-scm.com">http://git-scm.com</a> Git] and several other tools, which enable me to add something to my personal knowledge base within no more than 10 manipulative keystrokes, and yes, no mouse needed! Check out more here: <a href="About.html">About</a>.
 </p>
 
 <p>
@@ -60,7 +63,7 @@ The Wiki records some academic notes and some of my interests.
 
 </ul>
 <li>
-Computer Science (Github (codes, projects, work): <a href="https://github.com/concretevitamin/">https://github.com/concretevitamin/</a>)
+Computer Science (Github (codes, projects, work): <a href="https://github.com/concretevitamin/)">https://github.com/concretevitamin/)</a>
 
 <ul>
 <li>
@@ -83,7 +86,7 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 
 </ul>
 <li>
-<a href="LaTeX.html">LaTeX</a>, notes on LaTeX.
+<a href="LaTeX.html">LaTeX</a>, notes on !LaTeX.
 
 <li>
 <a href="Linux Notes.html">Notes on Linux</a>.
@@ -99,7 +102,7 @@ Some AP/Highschool stuff. <a href="Physics.html">Physics</a>.<a href="Statistics
 <h2 id="toc_1.3">Tools + Geeky Stuff</h2>
 <ul>
 <li>
-<a href="Vim.html">Vim</a>. <em>The</em> editor. I don't edit things without it. <a href="https://github.com/concretevitamin/vim_config">My vimrc at Github</a>.
+<a href="Vim.html">Vim</a>. <em>The</em> editor. I don't edit things without it. [<a href="https://github.com/concretevitamin/vim_config">https://github.com/concretevitamin/vim_config</a> My vimrc at Github].
 
 <ul>
 <li>
@@ -113,13 +116,13 @@ Some AP/Highschool stuff. <a href="Physics.html">Physics</a>.<a href="Statistics
 <a href="Filezilla.html">Filezilla</a>
 
 <li>
-<a href="Irssi.html">Irssi</a>, a solid <a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">IRC</a> client.
+<a href="Irssi.html">Irssi</a>, a solid [<a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">http://en.wikipedia.org/wiki/Internet_Relay_Chat</a> IRC] client.
 
 <li>
 <a href="Git.html">Git</a>. I'm learning this powerful VCS. 
 
 <li>
-<a href="MathJax with Vimwiki.html">MathJax with Vimwiki</a>. Check out how I set up MathJax with Vimwiki here, so I can display cool math such as $a<sup><small>2 = b</small></sup>2 + c^2$.
+<a href="MathJax with Vimwiki.html">MathJax with Vimwiki</a>. Check out how I set up !MathJax with Vimwiki here, so I can display cool math such as \(a^2 = b^2 + c^2\).
 
 <li>
 <a href="Kindle.html">Kindle</a>. I am an ardent Kindle advocate.
@@ -138,14 +141,27 @@ Some AP/Highschool stuff. <a href="Physics.html">Physics</a>.<a href="Statistics
  
 <h2 id="toc_1.5">Contact</h2>
 <p>
-<img src="http://geotakucovi.com/mail0.png" />
+<a href="http://geotakucovi.com/mail0.png">http://geotakucovi.com/mail0.png</a>
 </p>
 
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: Fri 20 Jul 2012 06:16:52 PM CST
+Last Modified: Mon 23 Jul 2012 01:19:03 PM CST
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
