--- a/html/log.html
+++ b/html/log.html
@@ -1,14 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Site Maintenance Log - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Site Maintenance Log - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Site Maintenance Log</h1>
 <p>
-<em>NOTE</em>: I started this log on Feb 5, 2012. The <a href="https://github.com/concretevitamin/personal-wiki/commits/master">commit history</a> at Github contains <em>more</em> complete logs.
+<em>NOTE</em>: I started this log on Feb 5, 2012. The [<a href="https://github.com/concretevitamin/personal-wiki/commits/master">https://github.com/concretevitamin/personal-wiki/commits/master</a> commit history] at Github contains <em>more</em> complete logs.
 </p>
 <blockquote>
 Feb 5, 2012. Edited CSS: modify the appearance of hyperlinks.<br>
