--- a/html/me.html
+++ b/html/me.html
@@ -1,24 +1,28 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>About Me - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>About Me - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">About Me</h1>
 
 <h2 id="toc_1.1">Academic Interests</h2>
 <ul>
 <li>
 Math
-</li>
+
 <li>
 Computer Science
-</li>
+
 <li>
 Problem Solving
-</li>
+
 </ul>
 
 <h2 id="toc_1.2">Objective</h2>
@@ -30,13 +34,13 @@ Explore the world of Computer Science and/or Mathematics; bring change to the wo
 <ul>
 <li>
 C/C++, Java, Pascal, and some Python.
-</li>
+
 <li>
 CSS, PHP, and anything that is well documented online.
-</li>
+
 <li>
 I self-learned algorithms and data structures starting from 7th Grade when I was free.
-</li>
+
 </ul>
 
 <hr />
