--- a/html/music.html
+++ b/html/music.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Music I love - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Music I love - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Music I love</h1>
 <p>
 <em>I listen to some of the best impulses of this world...</em>
@@ -25,53 +29,53 @@
 <ul>
 <li>
 <em>Autumn Leaves</em> in Cannonball Adderley's <em>Somethin' Else</em> is the <strong>most impressive</strong> jazz piece I've ever heard! Listen also: In San Francisco.
-</li>
+
 <li>
 John Coltrane's <em>Moment's Notice</em>: <a href="http://www.last.fm/music/John+Coltrane/+videos/+1-FMVUWoFHwB0">http://www.last.fm/music/John+Coltrane/+videos/+1-FMVUWoFHwB0</a>
-</li>
+
 <li>
 Cannonball Addeley: <em>This Here</em>, <em>Spontaneous Combustion</em>.
-</li>
+
 </ul>
 
 <h2 id="toc_1.2">Pop Songs (Which I usually sing at KTV)</h2>
 <ol>
 <li>
 落花流水, 陈奕迅.  
-</li>
+
 <li>
 淘汰, 陈奕迅.
-</li>
+
 <li>
 K 歌之王, 陈奕迅.
-</li>
+
 <li>
 Secrets, One Republic.
-</li>
+
 <li>
 Love the Way You Lie, Eminem.
-</li>
+
 <li>
 Empire State of Mind, Jay-Z.
-</li>
+
 <li>
 你那么爱他, 李圣杰. <em>(though I don't understand the lyrics)</em>
-</li>
+
 <li>
 新不了情.
-</li>
+
 <li>
 如果我变成回忆, TANK.
-</li>
+
 <li>
-爱没有假如, 若兰. <a href="AiMeiYouJiaRu.html">Lyrics</a>
-</li>
+爱没有假如, 若兰. <a href="AiMeiYouJiaRu][/|/gLyrics.html">AiMeiYouJiaRu][Lyrics</a>
+
 <li>
 哎呀咿呀, 陈奕迅.
-</li>
+
 <li>
-孤独患者, 陈奕迅. <a href="GuDuHuanZhe.html">Lyrics</a>
-</li>
+孤独患者, 陈奕迅. <a href="GuDuHuanZhe][/|/gLyrics.html">GuDuHuanZhe][Lyrics</a>
+
 </ol>
 
 <hr />
