--- a/html/About.html
+++ b/html/About.html
@@ -1,15 +1,19 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>About - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>About - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">About</h1>
 
 <p>
-This entire Wiki is maintained with several fantastic tools. The primary ones are <a href="http://code.google.com/p/vimwiki/">Vimwiki</a> and <a href="http://www.vim.org/">Vim</a>. Some supplementary tools those make life eaiser (or those insidiously move me toward the purely technical end...) are <a href="http://www.dropbox.com/">Dropbox</a>, <a href="http://git-scm.com/">Git</a>, and <code>cron</code>.
+This entire Wiki is maintained with several fantastic tools. The primary ones are [<a href="http://code.google.com/p/vimwiki/">http://code.google.com/p/vimwiki/</a> Vimwiki] and [<a href="http://www.vim.org/">http://www.vim.org/</a> Vim]. Some supplementary tools those make life eaiser (or those insidiously move me toward the purely technical end...) are [<a href="http://www.dropbox.com/">http://www.dropbox.com/</a> Dropbox], [<a href="http://git-scm.com/">http://git-scm.com/</a> Git], and <code>cron</code>.
 </p>
 
 <p>
@@ -38,7 +42,7 @@ $ chmod +x hooks/post-receive
 </pre>
 
 <p>
-It sets up a git <code>post-receive</code> hook, and the hook will update the actual files whenever the git repo is updated. See <a href="http://toroid.org/ams/git-website-howto">Using Git to manage a web site</a>.
+It sets up a git <code>post-receive</code> hook, and the hook will update the actual files whenever the git repo is updated. See [<a href="http://toroid.org/ams/git-website-howto">http://toroid.org/ams/git-website-howto</a> Using Git to manage a web site].
 </p>
 
 <hr />
