--- a/html/An Occurrence at Owl Creek Bridge.html
+++ b/html/An Occurrence at Owl Creek Bridge.html
@@ -1,52 +1,56 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>An Occurrence at Owl Creek Bridge</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>An Occurrence at Owl Creek Bridge</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <p>
 After civil war:
 </p>
 <ul>
 <li>
 Regionalism
-</li>
+
 <li>
 Realism
-</li>
+
 <li>
 Naturalism
-</li>
+
 <li>
 Psychological Novel
-</li>
+
 <li>
 Ironists
-</li>
+
 </ul>
 
 <h1 id="toc_1">An Occurence at Owl Creek Bridge</h1>
 <ul>
 <li>
 Bierce: a cynic; fought in Civil War.
-</li>
+
 <li>
 In Romantic novels, bravery was normally rewarded. But in this passage, the man dies for nothing.
-</li>
+
 </ul>
 
 <ul>
 <li>
 Point of View *
-</li>
+
 <li>
 changes
-</li>
+
 <li>
 Part I: objective. Part II: omniscient. Part III: limited.
-</li>
+
 </ul>
     
 
@@ -57,56 +61,56 @@ use omniscient to show:
 <ul>
 <li>
 reasons behind execution
-</li>
+
 <li>
 personality &amp; background of the protagonist
-</li>
+
 </ul>
 
 <ul>
 <li>
 "without too much qualification assented to at least a part of the frankly villainous dictum that all is fair in love and war."
-</li>
+
 </ul>
 <h3 id="toc_1.1.1">Reasons</h3>
 <ol>
 <li>
 the bridge is important 
-</li>
+
 <li>
 be hanged immediately if they interfere
-</li>
+
 </ol>
 
 <ul>
 <li>
 The description shows sympathy towards the man.
-</li>
+
 <li>
 "The sentinels, facing the banks of the stream, might have been statues to adorn the bridge. "
-</li>
+
 <ul>
 <li>
 "motionless", "stonily"
-</li>
+
 <li>
 suggests that they are inhuman, cold-blooded.
-</li>
+
 </ul>
 <li>
 Then the author describes the man. Full details, kind-featured; **<strong>A strong contrast</strong>**.
-</li>
+
 <ul>
 <li>
 to show the man is noble, human
-</li>
+
 <li>
 to show **<strong>sympathy</strong>** (even though he's a southerner)
-</li>
+
 </ul>
 <li>
 He is a slave owner. Therefore, he supports the South and fights against the North.
-</li>
+
 </ul>
 
 <h2 id="toc_1.2">Part III</h2>
