--- a/html/Filezilla.html
+++ b/html/Filezilla.html
@@ -1,19 +1,23 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Filezilla</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Filezilla</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <ul>
 <li>
 Use Filezilla to collaborate with Vimwiki and Firefox.
-</li>
+
 <ul>
 <li>
 Press &lt;Alt&gt;+Down to upload the focused file or directory.
-</li>
+
 </ul>
 </ul>
 
