--- a/html/German.html
+++ b/html/German.html
@@ -2,18 +2,34 @@
 <html>
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
 <title>German</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
+
 <body>
 
 <p>
-<a href="german_declension1.png"><img src="german_declension1.png" /></a>
+<a href="german_declension1.png.html">german_declension1.png</a>
 </p>
 
 <p>
-<a href="german_declension2.png"><img src="german_declension2.png" /></a>
+<a href="german_declension2.png.html">german_declension2.png</a>
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
