--- a/html/Git.html
+++ b/html/Git.html
@@ -1,48 +1,52 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Git - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Git - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Git</h1>
 
 <p>
-I live push my entire wiki from my local computer to this website and <a href="https://github.com/concretevitamin/personal-wiki">https://github.com/concretevitamin/personal-wiki</a>. Check out how <a href="About.html">Here</a>.
+I live push my entire wiki from my local computer to this website and <a href="https://github.com/concretevitamin/personal-wiki.">https://github.com/concretevitamin/personal-wiki.</a> Check out how <a href="About.html">Here</a>.
 </p>
 
 <p>
-<a href="http://progit.org/book/">Pro Git</a>, THE tutorial.
+[<a href="http://progit.org/book/">http://progit.org/book/</a> Pro Git], THE tutorial.
 </p>
 
 <ul>
 <li>
-CRLF/LF problem, check <a href="http://stackoverflow.com/questions/1967370/git-replacing-lf-with-crlf">this</a> out.
-</li>
+CRLF/LF problem, check [<a href="http://stackoverflow.com/questions/1967370/git-replacing-lf-with-crlf">http://stackoverflow.com/questions/1967370/git-replacing-lf-with-crlf</a> this] out.
+
 <li>
-Viewing the Commit History, <a href="http://progit.org/book/ch2-3.html">here</a>.
-</li>
+Viewing the Commit History, [<a href="http://progit.org/book/ch2-3.html">http://progit.org/book/ch2-3.html</a> here].
+
 <li>
 Alias: <a href="http://progit.org/book/ch2-7.html">http://progit.org/book/ch2-7.html</a>
-</li>
+
 <li>
-Dealing with “non-fast-forward” errors: check out the "Dealing with “non-fast-forward” errors" section <a href="http://help.github.com/remotes/">here</a>.
-</li>
+Dealing with “non-fast-forward” errors: check out the "Dealing with “non-fast-forward” errors" section [<a href="http://help.github.com/remotes/">http://help.github.com/remotes/</a> here].
+
 </ul>
 
 <h2 id="toc_1.1">Frequently Used Commands</h2>
 <ul>
 <li>
 git show --pretty="format:" --name-only % alias lf (last files)
-</li>
+
 <li>
 git commit -a -m % alias comm
-</li>
+
 <ul>
 <li>
 git comm 'MSG' --amend
-</li>
+
 </ul>
 </ul>
 <hr />
