--- a/html/Issues in training models.html
+++ b/html/Issues in training models.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
 <title>Issues in training models</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
+
 <body>
 
 <h1 id="toc_1">Issues in training models</h1>
@@ -36,4 +39,17 @@ Last Modified: Fri 08 Jun 2012 01:58:45 PM CST
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
