--- a/html/Machine Learning Notes.html
+++ b/html/Machine Learning Notes.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
 <title>Machine Learning Notes - Covi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
+
 <body>
 
 <h1 id="toc_1">Machine Learning Notes</h1>
@@ -16,10 +19,10 @@ Since Apr 2012 I have been taking Coursera.org's online Machine Learning course.
 <h2 id="toc_1.1">Notes</h2>
 <ul>
 <li>
-Logistic regression. (<a href="http://me.geotakucovi.com/logistic.html">html</a> | <a href="http://me.geotakucovi.com/logistic.pdf">pdf</a>)
+Logistic regression. ([<a href="http://me.geotakucovi.com/logistic.html">http://me.geotakucovi.com/logistic.html</a> html] | [<a href="http://me.geotakucovi.com/logistic.pdf">http://me.geotakucovi.com/logistic.pdf</a> pdf])
 
 <li>
-Regularization (for linear regression and logistic regression). (<a href="http://me.geotakucovi.com/regularization.pdf">pdf</a>)
+Regularization (for linear regression and logistic regression). ([<a href="http://me.geotakucovi.com/regularization.pdf">http://me.geotakucovi.com/regularization.pdf</a> pdf])
 
 <li>
 <a href="Issues in training models.html">Issues in training models</a>.
@@ -33,4 +36,17 @@ Last Modified: Fri 08 Jun 2012 12:50:45 PM CST
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
