--- a/html/Movies (covilap's conflicted copy 2011-05-16).html
+++ b/html/Movies (covilap's conflicted copy 2011-05-16).html
@@ -1,54 +1,58 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Movies I've Watched</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Movies I've Watched</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Movies I've Watched</h1>
 
 <h2 id="toc_1.1">Feb, 2011</h2>
 <ul>
 <li>
 <em>The King's Speech</em>, 2010.
-</li>
+
 <li>
 <em>Black Swan</em>, 2010.
-</li>
+
 </ul>
 
 <h2 id="toc_1.2">Mar, 2011</h2>
 <ul>
 <li>
 <em>127 Hours</em>, 2010.
-</li>
+
 <li>
 <em>Love Actually</em>, 2003.
-</li>
+
 <li>
 <em>The Fighter</em>, 2010.
-</li>
+
 <li>
 <em>There Will be Blood</em>, 2007.
-</li>
+
 </ul>
 
 <h2 id="toc_1.3">Apr, 2011</h2>
 <ul>
 <li>
 <em>Jarhead</em>, 2005.
-</li>
+
 <li>
 <em>12</em>, 2007.
-</li>
+
 </ul>
 
 <h2 id="toc_1.4">May, 2011</h2>
 <ul>
 <li>
 <em>Fast Five</em>, 2011.
-</li>
+
 </ul>
 <hr />
 <p>
