--- a/html/Python Notes.html
+++ b/html/Python Notes.html
@@ -1,18 +1,22 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Python Notes - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Python Notes - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Python Notes</h1>
 <p>
-Check out my exercise codes for <a href="http://code.google.com/edu/languages/google-python-class/index.html">Google's Python Class</a> on <a href="https://github.com/concretevitamin/google-python-exercises-codes">Github</a>.
+Check out my exercise codes for [<a href="http://code.google.com/edu/languages/google-python-class/index.html">http://code.google.com/edu/languages/google-python-class/index.html</a> Google's Python Class] on [<a href="https://github.com/concretevitamin/google-python-exercises-codes">https://github.com/concretevitamin/google-python-exercises-codes</a> Github].
 </p>
 
 <p>
-Also, I use <a href="http://projecteuler.net/problems">Project Euler</a> for practicing the language. My codes on <a href="https://github.com/concretevitamin/ProjectEuler">Github</a>.
+Also, I use [<a href="http://projecteuler.net/problems">http://projecteuler.net/problems</a> Project Euler] for practicing the language. My codes on [<a href="https://github.com/concretevitamin/ProjectEuler">https://github.com/concretevitamin/ProjectEuler</a> Github].
 </p>
 
 <hr />
