--- a/html/Reading.html
+++ b/html/Reading.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>My Reading - Covi </title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>My Reading - Covi </title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">All About My Reading</h1>
 
 <p>
@@ -20,50 +24,50 @@ These books and short passages are mostly read on <a href="Kindle.html">My Kindl
 <ul>
 <li>
 Ethan Frome, by Edith Wharton; finished in Dec 2010.
-</li>
+
 <li>
 <a href="The Adventures of Huckleberry Finn.html">The Adventures of Huckleberry Finn</a>, by Mark Twain; finished on Jan 31, 2011.
-</li>
+
 <li>
 Great Gatsby, by F. Scott Fitzgerald.
-</li>
+
 </ul>
 
 <h2 id="toc_1.2">Pieces, Essays, Short Stories</h2>
 <ul>
 <li>
 <a href="An Occurrence at Owl Creek Bridge.html">An Occurrence at Owl Creek Bridge</a>, Ambrose Bierce.
-</li>
+
 <li>
 <a href="A Mystery of Heroism.html">A Mystery of Heroism</a>, Stephen Crane.
-</li>
+
 <li>
 <em>Such, Such were the Joys</em>, George Orwell. (See also <a href="wordcount.html">here</a>.)
-</li>
+
 <li>
 <em>Why I Write</em>, George Orwell.
-</li>
+
 </ul>
 
 <h2 id="toc_1.3">English Literature</h2>
 <ul>
 <li>
 <a href="Frankenstein.html">Frankenstein</a>, by Mary Shelley; finished on Feb 4, 2011.
-</li>
+
 </ul>
 
 <h2 id="toc_1.4">Fantansy</h2>
 <ul>
 <li>
 <a href="A Clash of Kings.html">A Clash of Kings</a> (2nd of the series <a href="A Song of Ice and Fire.html">A Song of Ice and Fire</a>) by George R. R. Martin; finished on Mid Autumn Festival, Sep 12, 2011.
-</li>
+
 </ul>
 
 <h2 id="toc_1.5">Poetry</h2>
 <ul>
 <li>
 <em>Ulysses</em>, by Alfred, Lord Tennyson
-</li>
+
 </ul>
 
 <hr />
