--- a/html/Vimwiki.html
+++ b/html/Vimwiki.html
@@ -1,34 +1,38 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Vimwiki Notes - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Vimwiki Notes - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">Vimwiki Notes</h1>
 
 <h2 id="toc_1.1">Commands</h2>
 <ul>
 <li>
-<code>\wd</code>				Delete WikiWord you're in.
-</li>
+<code>\wd</code>				Delete !WikiWord you're in.
+
 <li>
-<code>\wr</code>				Rename WikiWord you're in.	
-</li>
+<code>\wr</code>				Rename !WikiWord you're in.	
+
 </ul>
 
 <h2 id="toc_1.2">Notes</h2>
 <ul>
 <li>
 To disable the sound when switching out of Vimperator using <code>&lt;A-Tab&gt;</code>, see <code>:h :VisualBell</code>.
-</li>
+
 <li>
-To disable a WikiWord to be a link, add <code>let g:vimwiki_camel_case=0</code> in the config.
-</li>
+To disable a !WikiWord to be a link, add <code>let g:vimwiki_camel_case=0</code> in the config.
+
 <li>
 <code>[http://example.com/ Description]</code> Add URL with description.
-</li>
+
 </ul>
 
 <hr />
