--- a/html/on fundamental frequency.html
+++ b/html/on fundamental frequency.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>on fundamental frequency</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>on fundamental frequency</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <pre>
 L = lamda_1 / 2 = lamda_2 = 3 * lamda_3 / 2
 
