--- a/html/snippets.html
+++ b/html/snippets.html
@@ -1,20 +1,24 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Collection of Code Snippets - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>Collection of Code Snippets - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1>Table of Contents</h1>
 <div class="toc">
 <ul>
-<li><a href="#toc_0.1">Haskell</a></li>
+<li><a href="#toc_0.1">Haskell</a>
 <ul>
-<li><a href="#toc_0.1.1">Quicksort in Haskell...</a></li>
-<li><a href="#toc_0.1.2">Fibonacci, the Hello World in Haskell</a></li>
+<li><a href="#toc_0.1.1">Quicksort in Haskell...</a>
+<li><a href="#toc_0.1.2">Fibonacci, the Hello World in Haskell</a>
 </ul>
-<li><a href="#toc_0.2">Python</a></li>
+<li><a href="#toc_0.2">Python</a>
 </ul>
 </ul>
 </div>
@@ -49,8 +53,8 @@ How elegant is that.
 
 <ul>
 <li>
-<a href="python_prime_generator.html">Prime generator</a>.
-</li>
+<a href="python_prime_generator][Prime generator.html">python_prime_generator][Prime generator</a>.
+
 </ul>
 
 <hr />
