--- a/html/wordcount.html
+++ b/html/wordcount.html
@@ -1,18 +1,22 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>wordcount.py and Some Interesting Results - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
+
+<title>wordcount.py and Some Interesting Results - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
 <body>
+
 <h1 id="toc_1">wordcount.py and Some Interesting Results</h1>
 <p>
 <code>wordcount.py</code> is a tiny Python program I wrote for fun, that counted the most frequent words in an article and their occurances. It supports arbitrary number of most frequent words.
 </p>
 
 <p>
-The code, along with some sample results, can be found here: <a href="https://github.com/concretevitamin/wordcount">Github</a>.
+The code, along with some sample results, can be found here: [<a href="https://github.com/concretevitamin/wordcount">https://github.com/concretevitamin/wordcount</a> Github].
 </p>
 
 <h2 id="toc_1.1">Some Interesting Results</h2>
@@ -23,10 +27,10 @@ I selected two quite personal pieces to examine their 15 most frequent words:
 <ul>
 <li>
 <em>Such, Such were the Joys</em>, by George Orwell
-</li>
+
 <li>
 <em>Once More to the Lake</em>, by E. B. White
-</li>
+
 </ul>
 
 <p>
@@ -104,7 +108,7 @@ Huge difference from all other three articles!
 <hr />
 <p>
 Created Date: November 26, 2011 10:34:46<br />
-Last Modified: November 26, 2011 11:02:07 
+<a href="Last.html">Last</a> Modified: November 26, 2011 11:02:07 
 </p>
 
 </body>
