--- a/html/index.html
+++ b/html/index.html
@@ -158,7 +158,7 @@ Last Modified: Mon 23 Jul 2012 01:19:03 PM CST
     jax: ["input/TeX","output/HTML-CSS"],
     tex2jax: {
         inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
     }
   });
